# rust_ssr

./: .gitignore  Cargo.toml
src/: main.rs
static/: index.html
