[package]
name = "iron_ws_test"
version = "0.1.0"
authors = ["Pavlikov Vitaly <vpavlikov@marathonbet.ru>"]

[dependencies]
time = "~0.1.0"
iron = "~0.5.0"
router = "~0.5.0"
mount = "~0.3.0"
rustc-serialize = "~0.3.0"

[dependencies.staticfile]
version = "~0.4.0"
default-features = false
features = ["cache"]