[package]
authors = ["Pavlikov Vitaly <vpavlikov@marathonbet.ru>"]
name = "iron_ws_test"
version = "0.1.0"

[dependencies]
iron = "~0.5.0"
mount = "~0.3.0"
router = "~0.5.0"
rustc-serialize = "~0.3.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
time = "~0.1.0"

[dependencies.staticfile]
default-features = false
features = ["cache"]
version = "~0.4.0"
